GUI works
It do be messy - to obkomentowane jest raczej docelowe - to, co jest nieobkomentowane np. w MainWindow jest tymczasowe, żeby śmigało na razie bez ustawień