@@ -1,20 +1,32 @@
 plugins {
     id 'java'
+    id 'application'
+    // Add the official JavaFX plugin
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
-
-group = 'org.example'
-version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+javafx {
+    version = "25"
+
+    // Declare which JavaFX modules your GUI needs
+    // 'controls' handles buttons/labels, 'fxml' handles layout files if you use them
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
-test {
-    useJUnitPlatform()
+application {
+    // Point Gradle to your main class that contains the main method
+    mainClass = 'org.example.Main'
+    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
+    applicationDefaultJvmArgs = [
+            '--enable-native-access=javafx.graphics',
+            '-Dfile.encoding=UTF-8'
+    ]
+}
+
+run {
+    standardInput = System.in
 }
